[package]
name = "perlin_noise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29"
env_logger = "0.10"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
image = "0.25"
rand = "0.8"
